--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,6 @@
   margin: 0;
   padding: 0;
 }
-
 #d3-content {
   width: 100%;
   height: auto;
@@ -30,7 +29,7 @@
 }
 .card {
   width: 40%;
-  height: auto;
+  height: 280px;
   background: rgba(110, 108, 108, 0.979);
   padding: 1% 1.5%;
   text-align: center;
@@ -43,5 +42,5 @@
   border: 5px #6BB1FF solid;
   position: relative;
   left: 0;
-  top:600px;
+  top:550px;
 }
